@@ -20,3 +20,4 @@ mdate-sh
 stamp-vti
 texinfo.tex
 version.texi
+parts.texi
